Connected to website and created a list

--- a/Scraping.ipynb
+++ b/Scraping.ipynb
@@ -18,7 +18,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "URL = \"https://www.apartments.com/?sk=7aad2d4b521360c23d12ee1f82468baa&bb=21s867zlmNiwlwgmX\"\n",
+    "\n",
+    "page = requests.get(URL)\n",
+    "\n",
+    "soup = BeautifulSoup(page.content, 'html.parser')\n",
+    "\n",
+    "lists = soup.find_all('li', class_=\"mortar-wrapper\")"
+   ]
   }
  ],
  "metadata": {
