pulled the rank from the IMDb Top 250 TV show website

--- a/Scraping.ipynb
+++ b/Scraping.ipynb
@@ -15,14 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "250\n"
+      "1\n"
      ]
     }
    ],
@@ -37,8 +37,13 @@
     "    soup = BeautifulSoup(page.text, 'html.parser')\n",
     "    \n",
     "    tv_shows = soup.find('tbody', class_= \"lister-list\").find_all('tr')\n",
-    "    print(len(tv_shows))\n",
+    "    \n",
+    "    for tv_show in tv_shows:\n",
     "\n",
+    "        rank = tv_show.find('td', class_ = \"titleColumn\").get_text(strip=True).split('.')[0]\n",
+    "\n",
+    "        print(rank)\n",
+    "        break\n",
     "except Exception as e:\n",
     "    print(e)\n",
     "\n"
