got the title name of the tv show from the IMDb Top 250 TV shows website

--- a/Scraping.ipynb
+++ b/Scraping.ipynb
@@ -15,14 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "Planet Earth II\n"
      ]
     }
    ],
@@ -42,7 +42,9 @@
     "\n",
     "        rank = tv_show.find('td', class_ = \"titleColumn\").get_text(strip=True).split('.')[0]\n",
     "\n",
-    "        print(rank)\n",
+    "        name = tv_show.find('td', class_ = \"titleColumn\").a.text\n",
+    "\n",
+    "        print(name)\n",
     "        break\n",
     "except Exception as e:\n",
     "    print(e)\n",
