got the release year of the tv shows from the website

--- a/Scraping.ipynb
+++ b/Scraping.ipynb
@@ -15,14 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Planet Earth II\n"
+      "2016\n"
      ]
     }
    ],
@@ -44,7 +44,9 @@
     "\n",
     "        name = tv_show.find('td', class_ = \"titleColumn\").a.text\n",
     "\n",
-    "        print(name)\n",
+    "        release_year = tv_show.find('td', class_ = \"titleColumn\").span.text.strip('()')\n",
+    "\n",
+    "        print(release_year)\n",
     "        break\n",
     "except Exception as e:\n",
     "    print(e)\n",
