got the rating of the tv show from the website

--- a/Scraping.ipynb
+++ b/Scraping.ipynb
@@ -15,14 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2016\n"
+      "\n",
+      "9.4\n",
+      "\n"
      ]
     }
    ],
@@ -46,7 +48,9 @@
     "\n",
     "        release_year = tv_show.find('td', class_ = \"titleColumn\").span.text.strip('()')\n",
     "\n",
-    "        print(release_year)\n",
+    "        rating = tv_show.find('td', class_ = \"ratingColumn imdbRating\").text\n",
+    "\n",
+    "        print(rating)\n",
     "        break\n",
     "except Exception as e:\n",
     "    print(e)\n",
