created an excel sheet

--- a/Scraping.ipynb
+++ b/Scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,35 @@
     "\n",
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
-    "from csv import writer"
+    "import openpyxl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Sheet']\n",
+      "['Top 250 TV Shows']\n"
+     ]
+    }
+   ],
+   "source": [
+    "excel = openpyxl.Workbook()\n",
+    "\n",
+    "print(excel.sheetnames)\n",
+    "\n",
+    "sheet = excel.active\n",
+    "\n",
+    "sheet.title = 'Top 250 TV Shows'\n",
+    "\n",
+    "print(excel.sheetnames)\n",
+    "\n",
+    "sheet.append(['TV Show Rank', 'TV Show Name', 'Year of Release', 'IMDb Rating'])"
    ]
   },
   {
@@ -298,6 +326,7 @@
     "        rating = tv_show.find('td', class_ = \"ratingColumn imdbRating\").strong.text\n",
     "\n",
     "        print(rank, name, release_year, rating)\n",
+    "        sheet.append([rank, name, release_year, rating])\n",
     "\n",
     "except Exception as e:\n",
     "    print(e)\n",
