saved my excel file

--- a/Scraping.ipynb
+++ b/Scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -43,266 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 Planet Earth II 2016 9.4\n",
-      "2 Breaking Bad 2008 9.4\n",
-      "3 Planet Earth 2006 9.4\n",
-      "4 Band of Brothers 2001 9.4\n",
-      "5 Chernobyl 2019 9.3\n",
-      "6 The Wire 2002 9.3\n",
-      "7 Avatar: The Last Airbender 2005 9.2\n",
-      "8 Blue Planet II 2017 9.2\n",
-      "9 Cosmos: A Spacetime Odyssey 2014 9.2\n",
-      "10 The Sopranos 1999 9.2\n",
-      "11 Our Planet 2019 9.2\n",
-      "12 Cosmos 1980 9.2\n",
-      "13 Game of Thrones 2011 9.2\n",
-      "14 Rick and Morty 2013 9.1\n",
-      "15 The World at War 1973 9.1\n",
-      "16 The Last Dance 2020 9.1\n",
-      "17 Fullmetal Alchemist: Brotherhood 2009 9.0\n",
-      "18 Sherlock 2010 9.0\n",
-      "19 Life 2009 9.0\n",
-      "20 The Twilight Zone 1959 9.0\n",
-      "21 The Vietnam War 2017 9.0\n",
-      "22 Scam 1992: The Harshad Mehta Story 2020 9.0\n",
-      "23 Batman: The Animated Series 1992 9.0\n",
-      "24 Arcane 2021 9.0\n",
-      "25 Attack on Titan 2013 8.9\n",
-      "26 Firefly 2002 8.9\n",
-      "27 The Office 2005 8.9\n",
-      "28 Human Planet 2011 8.9\n",
-      "29 The Blue Planet 2001 8.9\n",
-      "30 Death Note 2006 8.9\n",
-      "31 The Beatles: Get Back 2021 8.9\n",
-      "32 True Detective 2014 8.9\n",
-      "33 Seinfeld 1989 8.9\n",
-      "34 Frozen Planet 2011 8.9\n",
-      "35 Only Fools and Horses 1981 8.9\n",
-      "36 Fargo 2014 8.9\n",
-      "37 Clarkson's Farm 2021 8.9\n",
-      "38 Persona 2018 8.9\n",
-      "39 The Civil War 1990 8.9\n",
-      "40 Hunter x Hunter 2011 8.9\n",
-      "41 Dekalog 1989 8.9\n",
-      "42 Cowboy Bebop 1998 8.9\n",
-      "43 Friends 1994 8.8\n",
-      "44 When They See Us 2019 8.8\n",
-      "45 Gravity Falls 2012 8.8\n",
-      "46 Last Week Tonight with John Oliver 2014 8.8\n",
-      "47 Nathan for You 2013 8.8\n",
-      "48 TVF Pitchers 2015 8.8\n",
-      "49 Monty Python's Flying Circus 1969 8.8\n",
-      "50 Africa 2013 8.8\n",
-      "51 It's Always Sunny in Philadelphia 2004 8.8\n",
-      "52 Apocalypse: The Second World War 2009 8.8\n",
-      "53 Das Boot 1985 8.8\n",
-      "54 Curb Your Enthusiasm 2000 8.8\n",
-      "55 Freaks and Geeks 1999 8.8\n",
-      "56 Pride and Prejudice 1995 8.8\n",
-      "57 Fawlty Towers 1975 8.8\n",
-      "58 Better Call Saul 2015 8.8\n",
-      "59 Black Mirror 2011 8.8\n",
-      "60 Narcos 2015 8.8\n",
-      "61 Twin Peaks 1990 8.8\n",
-      "62 Taskmaster 2015 8.7\n",
-      "63 The West Wing 1999 8.7\n",
-      "64 Blackadder Goes Forth 1989 8.7\n",
-      "65 Peaky Blinders 2013 8.7\n",
-      "66 Succession 2018 8.7\n",
-      "67 BoJack Horseman 2014 8.7\n",
-      "68 Dragon Ball Z 1989 8.7\n",
-      "69 Dragon Ball Z 1989 8.7\n",
-      "70 Chappelle's Show 2003 8.7\n",
-      "71 Leyla and Mecnun 2011 8.7\n",
-      "72 South Park 1997 8.7\n",
-      "73 Ted Lasso 2020 8.7\n",
-      "74 Rome 2005 8.7\n",
-      "75 Kota Factory 2019 8.7\n",
-      "76 The Mandalorian 2019 8.7\n",
-      "77 I, Claudius 1976 8.7\n",
-      "78 One Punch Man 2015 8.7\n",
-      "79 Over the Garden Wall 2014 8.7\n",
-      "80 Arrested Development 2003 8.7\n",
-      "81 Dark 2017 8.7\n",
-      "82 Oz 1997 8.7\n",
-      "83 Six Feet Under 2001 8.7\n",
-      "84 1883 2021 8.7\n",
-      "85 Steins;Gate 2011 8.7\n",
-      "86 The Simpsons 1989 8.7\n",
-      "87 House M.D. 2004 8.7\n",
-      "88 The Shield 2002 8.7\n",
-      "89 Stranger Things 2016 8.7\n",
-      "90 Invincible 2021 8.7\n",
-      "91 Battlestar Galactica 2004 8.7\n",
-      "92 Vinland Saga 2019 8.7\n",
-      "93 Downton Abbey 2010 8.7\n",
-      "94 Fleabag 2016 8.6\n",
-      "95 House of Cards 2013 8.6\n",
-      "96 Mad Men 2007 8.6\n",
-      "97 The Marvelous Mrs. Maisel 2017 8.6\n",
-      "98 The Boys 2019 8.6\n",
-      "99 One Piece 1999 8.6\n",
-      "100 The Crown 2016 8.6\n",
-      "101 Friday Night Lights 2006 8.6\n",
-      "102 Star Trek: The Next Generation 1987 8.6\n",
-      "103 Top Gear 2002 8.6\n",
-      "104 Peep Show 2003 8.6\n",
-      "105 The Grand Tour 2016 8.6\n",
-      "106 The Adventures of Sherlock Holmes 1984 8.6\n",
-      "107 Aspirants 2021 8.6\n",
-      "108 The X-Files 1993 8.6\n",
-      "109 Dexter 2006 8.6\n",
-      "110 Parks and Recreation 2009 8.6\n",
-      "111 The Thick of It 2005 8.6\n",
-      "112 Line of Duty 2012 8.6\n",
-      "113 Deadwood 2004 8.6\n",
-      "114 Justice League Unlimited 2004 8.6\n",
-      "115 The Jinx: The Life and Deaths of Robert Durst 2015 8.6\n",
-      "116 Berserk 1997 8.6\n",
-      "117 Father Ted 1995 8.6\n",
-      "118 Daredevil 2015 8.6\n",
-      "119 Demon Slayer: Kimetsu no Yaiba 2019 8.6\n",
-      "120 Code Geass 2006 8.6\n",
-      "121 Young Justice 2010 8.6\n",
-      "122 Haikyuu!! 2014 8.6\n",
-      "123 Atlanta 2016 8.6\n",
-      "124 The Bridge 2011 8.6\n",
-      "125 Archer 2009 8.6\n",
-      "126 Blackadder II 1986 8.6\n",
-      "127 This Is Us 2016 8.6\n",
-      "128 Naruto: Shippûden 2007 8.6\n",
-      "129 Gomorrah 2014 8.6\n",
-      "130 It's a Sin 2021 8.6\n",
-      "131 Lonesome Dove 1989 8.6\n",
-      "132 Monster 2004 8.6\n",
-      "133 Mindhunter 2017 8.6\n",
-      "134 The Return of Sherlock Holmes 1986 8.6\n",
-      "135 Blackadder the Third 1987 8.6\n",
-      "136 Formula 1: Drive to Survive 2019 8.6\n",
-      "137 Mystery Science Theater 3000 1988 8.6\n",
-      "138 Adventure Time 2010 8.6\n",
-      "139 Dopesick 2021 8.6\n",
-      "140 Making a Murderer 2015 8.6\n",
-      "141 Yellowstone 2018 8.6\n",
-      "142 Westworld 2016 8.6\n",
-      "143 Ramayan 1987 8.6\n",
-      "144 Behzat Ç.: Bir Ankara Polisiyesi 2010 8.6\n",
-      "145 QI 2003 8.5\n",
-      "146 Anne with an E 2017 8.5\n",
-      "147 Mr. Bean 1990 8.5\n",
-      "148 The Haunting of Hill House 2018 8.5\n",
-      "149 Justified 2010 8.5\n",
-      "150 Boardwalk Empire 2010 8.5\n",
-      "151 Poirot 1989 8.5\n",
-      "152 The Eric Andre Show 2012 8.5\n",
-      "153 The Queen's Gambit 2020 8.5\n",
-      "154 The Bugs Bunny Show 1960 8.5\n",
-      "155 Impractical Jokers 2011 8.5\n",
-      "156 Sarabhai V/S Sarabhai 2004 8.5\n",
-      "157 The Newsroom 2012 8.5\n",
-      "158 Yeh Meri Family 2018 8.5\n",
-      "159 Panchayat 2020 8.5\n",
-      "160 Flight of the Conchords 2007 8.5\n",
-      "161 Justice League 2001 8.5\n",
-      "162 Crash Landing on You 2019 8.5\n",
-      "163 Jujutsu Kaisen 2020 8.5\n",
-      "164 Dragon Ball 1986 8.5\n",
-      "165 Yes Minister 1980 8.5\n",
-      "166 The Family Man 2019 8.5\n",
-      "167 Dragon Ball 1995 8.5\n",
-      "168 Spaced 1999 8.5\n",
-      "169 Battlestar Galactica 2003 8.5\n",
-      "170 Coupling 2000 8.5\n",
-      "171 Mahabharat 1988 8.5\n",
-      "172 Shameless 2011 8.5\n",
-      "173 Homicide: Life on the Street 1993 8.5\n",
-      "174 Cobra Kai 2018 8.5\n",
-      "175 Mr. Robot 2015 8.5\n",
-      "176 The IT Crowd 2006 8.5\n",
-      "177 The Office 2001 8.5\n",
-      "178 Long Way Round 2004 8.5\n",
-      "179 Louie 2010 8.5\n",
-      "180 Gullak 2019 8.5\n",
-      "181 Fullmetal Alchemist 2003 8.5\n",
-      "182 Samurai Champloo 2004 8.5\n",
-      "183 Whose Line Is It Anyway? 1998 8.5\n",
-      "184 What We Do in the Shadows 2019 8.5\n",
-      "185 The Bureau 2015 8.5\n",
-      "186 Through the Wormhole 2010 8.5\n",
-      "187 Pose 2018 8.5\n",
-      "188 The Venture Bros. 2003 8.5\n",
-      "189 Letterkenny 2016 8.5\n",
-      "190 Skam 2015 8.5\n",
-      "191 Yes, Prime Minister 1986 8.5\n",
-      "192 I'm Alan Partridge 1997 8.5\n",
-      "193 Spartacus 2010 8.5\n",
-      "194 Doctor Who 2005 8.5\n",
-      "195 Sons of Anarchy 2008 8.5\n",
-      "196 Samurai Jack 2001 8.5\n",
-      "197 North & South 2004 8.5\n",
-      "198 Black Sun 2017 8.5\n",
-      "199 Silicon Valley 2014 8.5\n",
-      "200 Trailer Park Boys 2001 8.5\n",
-      "201 Spartacus: Gods of the Arena 2011 8.5\n",
-      "202 Neon Genesis Evangelion 1995 8.5\n",
-      "203 Futurama 1999 8.5\n",
-      "204 Ezel 2009 8.5\n",
-      "205 Brass Eye 1997 8.5\n",
-      "206 Endeavour 2012 8.5\n",
-      "207 Rurouni Kenshin: Trust and Betrayal 1999 8.5\n",
-      "208 Detectorists 2014 8.5\n",
-      "209 Hannibal 2013 8.5\n",
-      "210 From the Earth to the Moon 1998 8.5\n",
-      "211 Community 2009 8.5\n",
-      "212 Twin Peaks 2017 8.5\n",
-      "213 Mob Psycho 100 2016 8.5\n",
-      "214 The Expanse 2015 8.5\n",
-      "215 Generation Kill 2008 8.5\n",
-      "216 The Night Of 2016 8.5\n",
-      "217 Schitt's Creek 2015 8.4\n",
-      "218 The Angry Video Game Nerd 2004 8.4\n",
-      "219 Chef's Table 2015 8.4\n",
-      "220 Alfred Hitchcock Presents 1955 8.4\n",
-      "221 Big Little Lies 2017 8.4\n",
-      "222 Wentworth 2013 8.4\n",
-      "223 Regular Show 2009 8.4\n",
-      "224 The Punisher 2017 8.4\n",
-      "225 The Knick 2014 8.4\n",
-      "226 John Adams 2008 8.4\n",
-      "227 Erased 2016 8.4\n",
-      "228 Black Books 2000 8.4\n",
-      "229 The Defiant Ones 2017 8.4\n",
-      "230 X-Men: The Animated Series 1992 8.4\n",
-      "231 Mare of Easttown 2021 8.4\n",
-      "232 Vikings 2013 8.4\n",
-      "233 Ozark 2017 8.4\n",
-      "234 It's Okay to Not Be Okay 2020 8.4\n",
-      "235 Harley Quinn 2019 8.4\n",
-      "236 Garth Marenghi's Darkplace 2004 8.4\n",
-      "237 Mr Inbetween 2018 8.4\n",
-      "238 My Brilliant Friend 2018 8.4\n",
-      "239 Southland 2009 8.4\n",
-      "240 Horace and Pete 2016 8.4\n",
-      "241 Your Lie in April 2014 8.4\n",
-      "242 I Love Lucy 1951 8.4\n",
-      "243 Happy Valley 2014 8.4\n",
-      "244 Flames 2018 8.4\n",
-      "245 Modern Family 2009 8.4\n",
-      "246 Love, Death & Robots 2019 8.4\n",
-      "247 Foyle's War 2002 8.4\n",
-      "248 Jesus of Nazareth 1977 8.4\n",
-      "249 Luther 2010 8.4\n",
-      "250 Clannad: After Story 2008 8.4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "URL = \"https://www.imdb.com/chart/toptv/?ref_=nv_tvv_250\"\n",
     "\n",
@@ -325,11 +68,12 @@
     "\n",
     "        rating = tv_show.find('td', class_ = \"ratingColumn imdbRating\").strong.text\n",
     "\n",
-    "        print(rank, name, release_year, rating)\n",
     "        sheet.append([rank, name, release_year, rating])\n",
     "\n",
     "except Exception as e:\n",
     "    print(e)\n",
+    "\n",
+    "excel.save('Resources/IMDb_Top_250_TV_Shows.xlsx')\n",
     "\n"
    ]
   },
