Added marks for the excel portion

--- a/Scraping.ipynb
+++ b/Scraping.ipynb
@@ -28,16 +28,24 @@
     }
    ],
    "source": [
+    "# Creating an excel file\n",
+    "\n",
     "excel = openpyxl.Workbook()\n",
     "\n",
+    "# Viewing the sheet name\n",
+    "\n",
     "print(excel.sheetnames)\n",
     "\n",
+    "# Being on the active sheet\n",
     "sheet = excel.active\n",
     "\n",
+    "# Renaming the sheet name\n",
     "sheet.title = 'Top 250 TV Shows'\n",
     "\n",
+    "# Viewing the new sheet name\n",
     "print(excel.sheetnames)\n",
     "\n",
+    "# Add the 4 column names to the sheet\n",
     "sheet.append(['TV Show Rank', 'TV Show Name', 'Year of Release', 'IMDb Rating'])"
    ]
   },
