Did some edits and added more marks

--- a/Scraping.ipynb
+++ b/Scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,38 +51,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Setup the URL\n",
+    "\n",
     "URL = \"https://www.imdb.com/chart/toptv/?ref_=nv_tvv_250\"\n",
     "\n",
     "try:\n",
     "\n",
     "    page = requests.get(URL)\n",
+    "\n",
+    "    # Error will be thrown in case there are issues with the URL\n",
+    "\n",
     "    page.raise_for_status()\n",
     "\n",
+    "    # Getting the html text from the URL and parse it\n",
+    "\n",
     "    soup = BeautifulSoup(page.text, 'html.parser')\n",
+    "\n",
+    "    # Accessing the html that contains the information that is needed\n",
     "    \n",
     "    tv_shows = soup.find('tbody', class_= \"lister-list\").find_all('tr')\n",
+    "\n",
+    "    # Running a for loop to collect the information for each of the tv shows\n",
     "    \n",
     "    for tv_show in tv_shows:\n",
     "\n",
+    "        # Collecting the rank of the tv show\n",
+    "\n",
     "        rank = tv_show.find('td', class_ = \"titleColumn\").get_text(strip=True).split('.')[0]\n",
+    "\n",
+    "        # Collecting the name of the tv show\n",
     "\n",
     "        name = tv_show.find('td', class_ = \"titleColumn\").a.text\n",
     "\n",
+    "        # Collecting the release year of the tv show\n",
+    "\n",
     "        release_year = tv_show.find('td', class_ = \"titleColumn\").span.text.strip('()')\n",
     "\n",
+    "        # Collecting the IMDb rating of the tv show\n",
+    "\n",
     "        rating = tv_show.find('td', class_ = \"ratingColumn imdbRating\").strong.text\n",
+    "\n",
+    "        # Adding the information collected from the tv shows into the excel sheet\n",
     "\n",
     "        sheet.append([rank, name, release_year, rating])\n",
     "\n",
     "except Exception as e:\n",
     "    print(e)\n",
     "\n",
-    "excel.save('Resources/IMDb_Top_250_TV_Shows.xlsx')\n",
-    "\n"
+    "# Saving my excel file\n",
+    "\n",
+    "excel.save('Resources/IMDb_Top_250_TV_Shows.xlsx')"
    ]
   },
   {
